namespace PlateE_learning.Models
{
    public class Administrateur : Utilisateur
    {
        // Actions spécifiques : gestion utilisateurs, statistiques
    }
}
